# docx-rs

./: .gitignore  CLAUDE_DRAWINGML.md  CLAUDE_TOCFIX.md  Cargo.toml  test_summary.md
docs_drawingml/: README.md  TODO_ROADMAP.md
docs_drawingml/development_guide/: implementation_steps.md  success_criteria.md  test_strategy.md
docs_drawingml/reference_materials/: analysis_references.md
docs_drawingml/reference_materials/rust_code_templates/: boolean_serialization.rs  required_elements_structs.rs  safe_mode_structs.rs
docs_drawingml/reference_materials/xml_examples/: broken_drawingml.xml  fixed_drawingml.xml  working_drawingml.xml
docs_tocfix/: INTEGRATION.md  PROCESSING_RESULTS.md  TEST_ANLEITUNG.md
docx/hyperlink/bigger/: hyperlink-bigger.docx
docx/hyperlink/simple/: hyperlink-simple.docx
docx/toc/bigger/: inhaltsverzeichnis-bigger.docx
docx/toc/simple/: inhaltsverzeichnis-simple.docx
examples/: detailed_analysis.rs  test_docx.rs
src/: docx.rs  error.rs
src/document/: drawing.rs  hyperlink.rs  numbering.rs  paragraph.rs
src/formatting/: character_property.rs  color.rs  indent.rs
tests/: docx_analysis_test.rs  docx_output_test.rs  docx_sample_files_test.rs  hyperlink_simple_test.rs  integration_test.rs
