[package]
name = "docx-rust"
version = "0.1.10"
authors = ["cstkingkey <cstkingkey@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cstkingkey/docx-rs"
description = "A Rust library for parsing and generating docx files."
keywords = ["docx", "generator", "openxml", "parser"]

[dependencies]
derive_more = "0.99.17"
log = "0.4.14"
hard-xml = "1.27.0"
zip = {version = "1.1.2", default-features = false, features = ["deflate"]}
thiserror = "1"
async_zip = { version = "0.0.17", default-features = false, features = ["deflate"], optional = true }
futures-io = { version = "0.3.31" , optional = true}

[dev-dependencies]
env_logger = "0.11.3"
tokio = { version = "1.43.0" , features = ["macros", "rt", "fs", "io-util"]}
tokio-util = { version = "0.7.13", features = ["compat"] }


[features]
async = ["dep:async_zip", "dep:futures-io"]
